--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,37 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.display-4 {
+  color: white;
+  font-weight: bolder;
+  width: 450px;
+  border: 3px solid black;
+  border-radius: 20px;
+  background-color: #0069D9;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+table th{
+  border-right:5px solid white;
+  border-collapse: collapse;
+}
+
+/* table td{
+  border-right:5px solid white;
+  border-collapse: collapse;
+} */
+
+.table .thead-dark th {
+ 
+  color: white;
+ 
+  background-color: #0069D9;
+ 
+  border-color: white;
+ 
+}
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -12,6 +43,7 @@ a.navbar-brand {
 html {
   font-size: 14px;
 }
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
@@ -29,10 +61,6 @@ html {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
 
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -45,12 +73,4 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-}
+
