--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,34 +13,36 @@
 <div class="row my-3">
     <div class="col">
         <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="defaultUnchecked">
-            <label class="custom-control-label" for="defaultUnchecked">Add Entry</label>
+            <input type="checkbox" class="custom-control-input" id="addEntryCheck">
+            <label class="custom-control-label" for="addEntryCheck">Add Entry</label>
         </div>
     </div>
 </div>
 
-<div class="row">
-    <div class="col well">
+<div id="entryForm" style="display: none">
+    <div class="row">
+        <div class="col well">
+            <form method="post">
 
-        <form method="post">
+                <div class="form-group">
+                    <label for="txtFirstName">First Name:</label>
+                    <input id="txtFirstName" name="firstName" type="text" class="form-control" maxlength="100" />
+                </div>
+                <div class="form-group">
+                    <label for="txtLastName">Last Name:</label>
+                    <input id="txtLastName" name="lastName" type="text" class="form-control" maxlength="100" />
+                </div>
+                <div class="form-group">
+                    <label for="txtEntry">Entry:</label>
+                    <textarea id="txtEntry" name="entry" class="form-control" rows="5" columns="50" maxlength="300"></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success" asp-controller="Home" asp-action="AddSubmit">Add Entry</button>
+                    <button type="submit" class="btn btn-success" asp-controller="Home" asp-action="Index">Cancel</button>
+                </div>
 
-            <div class="form-group">
-                <label for="txtFirstName">First Name:</label>
-                <input id="txtFirstName" name="firstName" type="text" class="form-control" maxlength="100" />
-            </div>
-            <div class="form-group">
-                <label for="txtLastName">Last Name:</label>
-                <input id="txtLastName" name="lastName" type="text" class="form-control" maxlength="100" />
-            </div>
-            <div class="form-group">
-                <label for="txtEntry">Entry:</label>
-                <textarea id="txtEntry" name="entry" class="form-control" rows="5" columns="50" maxlength="300"></textarea>
-            <div class="form-group">
-                <button type="submit" class="btn btn-success" asp-controller="Home" asp-action="AddSubmit">Add Entry</button>
-                <button type="submit" class="btn btn-success" asp-controller="Home" asp-action="Index">Cancel</button>
-            </div>
-
-        </form>
+            </form>        
+        </div>
     </div>
 </div>
 
@@ -58,9 +60,8 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- challenge solution -->
                 @if (Model.count == 0) {
-                    <tr><td colspan="3">No courses in database...</td></tr>
+                    <tr><td colspan="3">No entries in the database...</td></tr>
                 } else {
                     foreach (var item in Model.entries) {
                         <tr style="border-bottom: 15px solid white; border-top: 10px solid white">
@@ -87,16 +88,3 @@
 <div class="row">
     <div class="col-sm-12"><h4>Total Entries: @Model.count</h4></div>
 </div>
-
-<script type="text/javascript">
-    //Get the button:
-    mybutton = document.getElementById("topButton");
-
-
-
-    // When the user clicks on the button, scroll to the top of the document
-    function topFunction() {
-    document.body.scrollTop = 0; // For Safari
-    document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
-    }
-</script>
