--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         </script>
     </environment>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/jquery.charactercounter.js"></script>
+    <script src="~/js/jquery.charCountPlugin.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
