--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,62 +1,57 @@
 ﻿@model guestbook.Models.GuestbookManager
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Guestbook App";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Guestbook App</h1>
-    <p></p>
+    <h1 class="display-test">Guestbook App</h1>
 </div>
-
 
 <div class="row my-3">
     <div class="col">
-        <div class="custom-control custom-checkbox">
-            <input type="checkbox" class="custom-control-input" id="addEntryCheck">
-            <label class="custom-control-label" for="addEntryCheck">Add Entry</label>
+        <div class="custom-control custom-switch">
+            <input id="addEntryCheck" asp-for="addEntryCheck" type="checkbox" value="@Model.addEntryCheck" />
+            @Html.Label("Add Entry")
         </div>
     </div>
 </div>
 
-<div id="entryForm" style="display: none">
-    <div class="row">
-        <div class="col well">
-            <form method="post">
+<div id="entryForm" class="row">
+    <div class="col well">
+        <form method="post">
 
-                <div class="form-group">
-                    <label for="txtFirstName">First Name:</label>
-                    <input id="txtFirstName" name="firstName" type="text" class="form-control" maxlength="100" />
-                </div>
-                <div class="form-group">
-                    <label for="txtLastName">Last Name:</label>
-                    <input id="txtLastName" name="lastName" type="text" class="form-control" maxlength="100" />
-                </div>
-                <div class="form-group">
-                    <label for="txtEntry">Entry:</label>
-                    <textarea id="txtEntry" data-charcount="true" data-maxlen="300" name="entry" class="form-control" rows="5" columns="50" maxlength="300"></textarea>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-success" asp-controller="Home" asp-action="AddSubmit">Add Entry</button>
-                    <button type="submit" class="btn btn-success" asp-controller="Home" asp-action="Index">Cancel</button>
-                </div>
+            <div class="form-group">
+                <label for="txtFirstName">First Name:</label>
+                <input id="txtFirstName" name="firstName" type="text" class="form-control" maxlength="100" />
+            </div>
+            <div class="form-group">
+                <label for="txtLastName">Last Name:</label>
+                <input id="txtLastName" name="lastName" type="text" class="form-control" maxlength="100" />
+            </div>
+            <div class="form-group">
+                <label for="txtEntry">Entry:</label>
+                <textarea id="txtEntry" data-charcount="true" data-maxlen="300" name="entry" class="form-control" rows="5" columns="50" maxlength="300"></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-success" asp-controller="Home" asp-action="AddSubmit">Save Entry</button>
+                <button type="submit" class="btn btn-success" asp-controller="Home" asp-action="Index">Cancel</button>
+            </div>
 
-            </form>        
-        </div>
+        </form>        
     </div>
 </div>
 
-<div class="row">
+<div id="test" class="row" style="display: none">
     <div class="col">
-
         <table class="table">
             <thead class="thead-dark">
                 <tr>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Entry Date</th>
-                    <th style="border-right: none;">Entry</th>
-                    <th></th>
+                    <th style="border-right: none; border-top-right-radius: 0px">Entry</th>
+                    <th style="border-top-left-radius: 0px"></th>
                 </tr>
             </thead>
             <tbody>
@@ -64,7 +59,7 @@
                     <tr><td colspan="3">No entries in the database...</td></tr>
                 } else {
                     foreach (var item in Model.entries) {
-                        <tr style="border-bottom: 15px solid white; border-top: 10px solid white">
+                        <tr style="border-bottom: 20px solid white; border-top: 15px solid white">
                             <td class="table-warning" style="min-width: 110px">@item.firstName</td>
                             <td class="table-warning" style="min-width: 110px">@item.lastName</td>
                             <td class="table-success" style="min-width: 200px">@item.dateOfEntry</td>
@@ -81,10 +76,5 @@
                 }
             </tbody>
         </table>
-
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-sm-12"><h4>Total Entries: @Model.count</h4></div>
+    </div>    
 </div>
