--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,14 +1,63 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
+﻿
 
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+#entryForm {
+  background-color: #B8DAFF;
+  width: 60%;
+  border-radius: 20px;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
+html {
+  overflow-y: scroll;
+}
+
+.display-test {
+    color: white;
+    font-weight: bolder;
+    width: 450px;
+    border: 3px solid black;
+    border-radius: 50px 20px;
+    background-color: #0069D9;
+    margin-left: auto;
+    margin-right: auto;  
+}
+
+.custom-switch {  
+  border: 1px solid black;
+  font-weight: bold;
+  width: 130px;
+  background-color: #B8DAFF;
+  border-radius: 5px;
+}
+
+#test {
+  word-wrap: break-word;
+  max-width: 1px;
+}
+
+  .table {
+    border-collapse: separate;
+    border-spacing:0 30px;
+}
+
+  .table .thead-dark th { 
+    color: white; 
+    background-color: #0069D9; 
+    border-color: white; 
+  }
+
+  table th {
+    border-right:5px solid white;
+    border-collapse: collapse;
+  }
+
+  th { border-radius: 10px; }
+
+  tr td:first-child { border-top-left-radius: 20px; }
+  tr td:last-child { border-top-right-radius: 20px; }
+  tr td:first-child { border-bottom-left-radius: 20px; }
+  tr td:last-child { border-bottom-right-radius: 20px; }
+
+
 html {
   font-size: 14px;
 }
@@ -17,17 +66,6 @@ html {
   html {
     font-size: 16px;
   }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 
